--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   google_fonts: ^2.1.0
   flutter_bloc: ^7.0.1
   flutter_svg: ^0.22.0
+  url_launcher: ^6.0.6
+  animated_text_kit: ^4.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
