upload icon and favicon.png

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "portfilio",
-    "short_name": "portfilio",
+    "name": "Thành",
+    "short_name": "Thành",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
