--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.3
-  google_fonts: ^2.1.0
-  flutter_bloc: ^7.0.1
-  flutter_svg: ^0.22.0
-  url_launcher: ^6.0.6
+  cupertino_icons: ^1.0.4
+  google_fonts: ^2.3.1
+  flutter_bloc: ^8.0.1
+  flutter_svg: ^1.0.3
+  url_launcher: ^6.0.20
   animated_text_kit: ^4.2.1
+  scrollable_positioned_list: ^0.2.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  flutter_lints: ^1.0.4
 
 flutter:
 
