--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   animated_text_kit: ^4.2.2
   scrollable_positioned_list: ^0.3.4
 
+  meta: ^1.8.0
+  bloc: ^8.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
